tests/failures/invalid_add.stderr
error: Tensor mismatch Inferred(TensorType { shape: [Dim { expr: Value(2) }, Dim { expr: Value(3) }], kind: Float, device: Cpu }) is incompatible with Inferred(TensorType { shape: [Dim { expr: Value(3) }, Dim { expr: Value(2) }], kind: Float, device: Cpu })
  --> tests/failures/invalid_add.rs:10:14
   |
10 |     let _c = a + b;
   |              ^^^^^
